components/popups/DisplayPopup.module.css
/* popup */

.popups {
    width: 100dvw;
    height: 100dvh;
    background-color: rgba(0, 0, 0, 0.459);
    position: fixed;
    left: 0;
    top: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 15;

    .popup {
        display: flex;
        border-radius: 32px;
        background: var(--frosted-glass);
        backdrop-filter: var(--frosted-glass-blur);
        box-shadow: var(--shadow);
        display: flex;
        flex-direction: column;
        width: fit-content;
        max-width: 720vw;
        animation: openPopup 0.2s ease-in-out;
        max-height: 90dvh;
        max-width: 90dvw;
        overflow-y: auto;
        border: var(--outline);

        .title {
            font-size: x-large;
            font-family: 'Dogica Pixel', Arial, Helvetica, sans-serif;
            color: var(--color-accent);
            padding: 20px;
        }

        .scrollable {
            box-shadow: var(--shadow);
            padding: 20px;
            overflow-y: scroll;
        }

        .footer {
            display: flex;
            justify-content: space-around;
            background: hsla(0, 0%, 0%, 10%);

            > * {
                flex-grow: 1;
            }

            button {
                border: 1px solid transparent;
                background: none;
                color: var(--color-text);
                cursor: pointer;
                transition: var(--smooth-transition);
            }
            button:hover {
                scale: var(--hover-scale);
            }
        }

        img {
            object-fit: cover;
            max-height: 50dvh;
            margin-top: 10px;
        }
    }
}

@keyframes openPopup {
    0% {
        transform: scale(0.9);
    }

    80% {
        transform: scale(1.02);
    }

    100% {
        transform: scale(1);
    }
}

